[package]
name = "chip8-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
eframe = "0.34.1"
egui_extras = "0.34.1"
rand = "0.10.0"
rodio = "0.22.2"
rust-embed = "8.11.0"
serde = "1.0.228"
serde_json = "1.0.149"
sha1 = "0.11.0"
spin_sleep = "1.3.3"
